--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,35 @@
-name: Deploy to Supabase
+name: Lint and Deploy to Supabase
 
 on:
   push:
     branches: [ release ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Run ESLint
+      run: npm run lint
+      continue-on-error: false
+
   deploy:
     runs-on: ubuntu-latest
+    needs: lint
+    if: github.ref == 'refs/heads/release'
     
     steps:
     - uses: actions/checkout@v4
