--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "dev": "node src/index.js",
     "deploy-commands": "node src/deploy-commands.js",
     "deploy-commands-prod": "NODE_ENV=production node src/deploy-commands.js",
-    "deploy-function": "supabase functions deploy discord-bot --no-verify-jwt",
-    "logs": "supabase functions logs discord-bot",
-    "status": "supabase status"
+    "deploy-function": "supabase functions deploy bluuprint-api --no-verify-jwt",
+    "logs": "supabase functions logs bluuprint-api",
+    "status": "supabase status",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "keywords": ["discord", "bot", "slash-commands"],
   "author": "",
@@ -19,5 +21,9 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "@eslint/js": "^9.0.0"
   }
 }
